--- a/src/pages/admin/admin.css
+++ b/src/pages/admin/admin.css
@@ -1,3 +1,32 @@
 .temptext {
     color: white;
 }
+
+.addbtn {
+    background: url("./adminAssets/add_icon.png") no-repeat center center;
+    background-size: 80% 80%;
+    border:none;
+    width:40px;
+    height:40px;
+    font-size:0;
+}
+
+.addformtext {
+
+}
+
+.form-item{
+    height: 25px;
+    margin: 5px;
+}
+
+.addform {
+    border-radius: 30px;
+    padding-left: 12px;
+}
+
+#addFormParent {
+    display: flex;
+    width: 400px;
+    margin-left: 20px;
+}
