--- a/src/App.css
+++ b/src/App.css
@@ -77,3 +77,8 @@ input::placeholder {
 .nav {
   position: absolute;
 }
+
+input:focus::-webkit-input-placeholder { color:transparent; }
+input:focus:-moz-placeholder { color:transparent; } /* FF 4-18 */
+input:focus::-moz-placeholder { color:transparent; } /* FF 19+ */
+input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
