--- a/src/assets/login.css
+++ b/src/assets/login.css
@@ -5,13 +5,13 @@
 
 .logotype {
     font-family: 'Rufina', sans-serif;
-    font-size: 55px;
+    font-size: 6.2vw;
     color: #282828;
 }
 .grow {
   margin: 32% auto;
-  padding: 10%;
   max-width: 450px;
+  padding: 0px 60px;
 }
 .side {
   background: #44E8AE;
@@ -68,6 +68,9 @@ form {
   .login input, .login button {
     width: 100%;
   }
+  .form {
+    width: 100%;
+  }
 }
 @media screen and (max-width: 600px) {
   .right {
@@ -80,7 +83,9 @@ form {
     height: 100vh;
     max-width: 100vh;
   }
+}
+@media screen and (max-width: 600px) {
   .logotype {
-    font-size: calc(10px + 12vw);
+    font-size: calc(10px + 11.5vw);
   }
 }
