update media query

--- a/src/App.css
+++ b/src/App.css
@@ -75,7 +75,7 @@ input::placeholder {
   margin: -54px 0px 0px 142px;
   z-index: 100;
   position: absolute;
-  margin: -53px 0px 0px 156px
+  margin: 29px 0px 0px -33px;
 }
 
 .nav {
