--- a/src/App.css
+++ b/src/App.css
@@ -141,6 +141,21 @@ ul, li   {
 button:focus {
   outline: 0px;
 }
+
+button:hover {
+  background-color: rgba(255, 255, 255, .8);
+  cursor: pointer;
+}
 .rel {
   position: relative;
+}
+
+.overlay {
+  z-index: 100;
+  background: #3ECC9A;
+  position: absolute;
+  top: 129px;
+  right: 42px;
+  border-radius: 5px;
+  padding: 20px;
 }
