--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ input, label, button {
   font-weight: bolder;
   font-size: 16px;
   position: relative;
-  margin: 20px 0px 20px 0px;
+  margin: 15px 0px;
   padding: 10px;
   text-transform: uppercase;
   text-align:center;
