update profile redirect

--- a/src/App.css
+++ b/src/App.css
@@ -188,3 +188,29 @@ h1 {
   align-items: center;
   justify-content: center;
 }
+.profile-pic {
+  width: 100%;
+  height: 100%;
+  background: white;
+  border-radius: 100%;
+  max-width: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+}
+
+.profile-nav {
+  position: absolute;
+  top: 43px;
+  right: 5px;
+  width: 50px;
+  height: 50px;
+}
+.profile-nav {
+  display: inline-flex;
+  align-items: center;
+}
+
+.profile-nav p {
+  margin-left: 5px;
+}
