--- a/src/App.css
+++ b/src/App.css
@@ -200,20 +200,23 @@ h1 {
 }
 
 .profile-nav {
+  display: inline;
   width: 50px;
   height: 50px;
 }
 .user {
-  position: absolute;
-  min-width: 150px;
   top: 5px;
   right: 150px;
+  color: white;
 }
+
 
 .user p {
-  margin-left: 5px;
+  margin: 0px 0px 0px 5px;
+  display: inline;
 }
 
-.user {
+.user:hover {
   text-decoration: none;
+  opacity: .9;
 }
