--- a/src/App.css
+++ b/src/App.css
@@ -188,17 +188,6 @@ h1 {
   align-items: center;
   justify-content: center;
 }
-.profile-pic {
-  width: 100%;
-  height: 100%;
-  background: white;
-  border-radius: 100%;
-  max-width: 100%;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-}
-
 .profile-nav {
   display: inline;
   width: 50px;
@@ -209,14 +198,27 @@ h1 {
   right: 150px;
   color: white;
 }
-
-
+.user:hover {
+  text-decoration: none;
+  opacity: .9;
+}
 .user p {
   margin: 0px 0px 0px 5px;
   display: inline;
 }
 
-.user:hover {
-  text-decoration: none;
-  opacity: .9;
+.user {
+  float: right;
+}
+.profile-pic {
+  width: 100%;
+  height: 100%;
+  background: white;
+  max-width: 100%;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
