--- a/src/assets/algo.css
+++ b/src/assets/algo.css
@@ -1,7 +1,18 @@
-/* li {
-  padding: 20px;
-  margin: 20px 0px;
-} */
+.tab {
+  min-width: 200px;
+  max-width: 250px;
+  padding: 10px;
+  background: #1F1F1F;
+  border-radius: 30px 30px 0px 0px;
+  text-align: center;
+}
+
+.nav-overflow {
+  overflow-x: auto;
+  overflow-y: hidden;
+  display: -webkit-box;
+}
+
 .algo-card {
     width: 700px;
     background-color: #282828;
