--- a/src/assets/algo.css
+++ b/src/assets/algo.css
@@ -5,8 +5,15 @@
   background: #1F1F1F;
   border-radius: 30px 30px 0px 0px;
   text-align: center;
+  border-bottom: 0px;
+  text-transform: uppercase;
+  font-family: 'Proxima Nova', sans-serif;
+  font-weight: bold;
 }
 
+.active {
+  background: #282828;
+}
 .nav-overflow {
   overflow-x: auto;
   overflow-y: hidden;
@@ -70,3 +77,25 @@
 .algo-link p {
     display: inline;
 }
+
+table {
+  font-size: 16px;
+}
+
+.nav-tabs {
+  border: 0px;
+}
+/* 
+.scroll::-webkit-scrollbar {
+    width: 50px;
+}
+
+.scroll::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+} */
