--- a/src/assets/algo.css
+++ b/src/assets/algo.css
@@ -85,7 +85,7 @@ table {
 .nav-tabs {
   border: 0px;
 }
-/* 
+/*
 .scroll::-webkit-scrollbar {
     width: 50px;
 }
@@ -99,3 +99,21 @@ table {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 } */
+
+.margin-auto h1, p {
+  margin: auto;
+}
+
+
+.percent {
+  font-size: 50px;
+  font-weight: bold;
+  text-align: center;
+  border-radius: 100%;
+  border: 3px solid #3ECC9A;
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  top: 59px;
+  right: 55px;
+}
