--- a/src/assets/algo.css
+++ b/src/assets/algo.css
@@ -1,7 +1,7 @@
 .tab {
   min-width: 200px;
   max-width: 250px;
-  padding: 10px;
+  padding: 10px 10px 0px 0px;
   background: #1F1F1F;
   border-radius: 30px 30px 0px 0px;
   text-align: center;
