--- a/src/assets/algo.css
+++ b/src/assets/algo.css
@@ -1,19 +1,3 @@
-.tab {
-  min-width: 200px;
-  max-width: 250px;
-  padding: 10px;
-  background: #1F1F1F;
-  border-radius: 30px 30px 0px 0px;
-  text-align: center;
-  border-bottom: 0px;
-  text-transform: uppercase;
-  font-family: 'Proxima Nova', sans-serif;
-  font-weight: bold;
-}
-
-.active {
-  background: #282828;
-}
 .nav-overflow {
   overflow-x: auto;
   overflow-y: hidden;
@@ -150,4 +134,38 @@ table {
 .panel-title a {
   color: white;
   text-align: left;
+}
+.transaction_table {
+  border-radius: 0px 5px;
+  width: 100%;
+  padding: 10px;
+  background: #282828;
+}
+
+.backtest .active {
+  background: #282828;
+}
+
+.tab {
+  min-width: 200px;
+  max-width: 250px;
+  padding: 10px;
+  background: #1F1F1F;
+  border-radius: 30px 30px 0px 0px;
+  text-align: center;
+  border-bottom: 0px;
+  text-transform: uppercase;
+  font-family: 'Proxima Nova', sans-serif;
+  font-weight: bold;
+}
+
+.transaction_table .tab {
+  text-align: left;
+  border: none;
+  border-radius: 0px;
+  background-color: #282828;
+}
+
+.active {
+  background: #282828;
 }
