--- a/src/assets/algo.css
+++ b/src/assets/algo.css
@@ -146,6 +146,11 @@ table {
   background: #282828;
 }
 
+.select-backtest {
+  cursor: pointer;
+  opacity: .8;
+}
+
 .tab {
   min-width: 200px;
   max-width: 250px;
