--- a/src/assets/algo.css
+++ b/src/assets/algo.css
@@ -17,6 +17,7 @@
     display: -webkit-box;
     margin: 0;
     padding: 0;
+    max-height: 500px;
 }
 
 .scroll-hide {
@@ -136,11 +137,6 @@ p {
     max-width: 300px;
 }
 
-.panel-overflow {
-    overflow: scroll;
-    max-height: 500px;
-}
-
 .list-group-item {
     background: none;
     color: white;
@@ -200,6 +196,9 @@ p {
     background: #282828;
 }
 
+.backtest {
+  max-width: 1200px;
+}
 .backtest .padding {
     background: #282828;
     border-radius: 0px 0px 5px 5px;
