--- a/src/assets/universe.css
+++ b/src/assets/universe.css
@@ -23,3 +23,48 @@
   color: white;
   background-color: #3ECC9A;
 }
+
+.universe-pane {
+  margin: 10px;
+}
+
+.universe-list{
+  list-style: none;
+  padding-left: 0;
+}
+
+.universe-list-item {
+  color: white;
+  padding-left: 5px;
+  padding-right: 5px;
+  cursor: pointer;
+}
+
+.universe-list-item.selected {
+  color: #3ECC9A;
+  border-style: solid;
+  border-radius: 30px;
+}
+
+.flex-container{
+  display: flex;
+}
+
+.flex-container.stocks{
+  display: flex;
+  flex-direction: column;
+}
+
+.universe-add{
+  max-width: 20px;
+  position: relative;
+  left: 10px;
+  top: 3px;
+}
+
+.multiselect {
+  margin-left: 30px;
+  width: 300px;
+  height: 50%;
+  color: black;
+}
