Refactored the stock addition to utilize a queried search feature for faster performance. There's still some room for refactoring for easier workflow, but it ticks the adding of stocks and adding of universes functionality.

--- a/src/assets/universe.css
+++ b/src/assets/universe.css
@@ -29,8 +29,11 @@
 }
 
 .universe-list{
+  color: white;
   list-style: none;
   padding-left: 0;
+  overflow-y: auto;
+  max-height: 500px;
 }
 
 .universe-list-item {
@@ -66,4 +69,11 @@
   margin-left: 30px;
   width: 300px;
   color: black;
+}
+
+.stocksearch {
+  color: yellow;
+}
+#newUniverseName {
+  text-transform: none;
 }
