--- a/src/assets/universe.css
+++ b/src/assets/universe.css
@@ -1,5 +1,6 @@
 .stock-list {
-    color: black;
+  color: white;
+  width: 100%;
 }
 
 .choose-universe .panel-title {
@@ -58,6 +59,9 @@
   flex-direction: column;
 }
 
+.flex-container.stock-list{
+}
+
 .universe-add{
   max-width: 20px;
   position: relative;
@@ -71,9 +75,11 @@
   color: black;
 }
 
-.stocksearch {
-  color: yellow;
-}
 #newUniverseName {
   text-transform: none;
+}
+
+.stock-remove-button {
+  position: relative;
+  max-width: 20px;
 }
