--- a/src/App.css
+++ b/src/App.css
@@ -333,7 +333,13 @@ h1 {
 .loading {
     font-size: 4rem;
 }
+.marginRight {
+    margin-right: 20px;
+}
 
+.marginLeft {
+  margin-left: 20px;
+}
 .loading:after {
   content: '•  ';
   animation: dots 1s steps(5, end) infinite;}
