Added save and clear buttons, added more intuitive stock addition

--- a/src/assets/universe.css
+++ b/src/assets/universe.css
@@ -39,8 +39,8 @@
 
 .universe-list-item {
   color: white;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
   cursor: pointer;
 }
 
@@ -50,7 +50,7 @@
 
 .universe-list-item.selected {
   color: #3ECC9A;
-  border-style: solid;
+  border: 1px solid;
   border-radius: 30px;
 }
 
@@ -62,12 +62,22 @@
   display: flex;
 }
 
+.con.flex-container{
+  max-width: 100%;
+  min-width: 100%;
+}
+
 .flex-container.stocks{
   display: flex;
   flex-direction: column;
 }
 
-.flex-container.stock-list{
+.stock-list.value-list{
+  color: #3ECC9A;
+  font-style: italic;
+  padding-left: 0px;
+  margin-block-end: 0px;
+  max-height: 250px;
 }
 
 .universe-add{
@@ -106,6 +116,13 @@
   min-width: 100%;
 }
 
+.submit-button{
+  color: #3ECC9A;
+  background-color: #1F1F1F;
+  border: 1px solid #3ECC9A;
+  border-radius: 30px;
+}
+
 .submit-button:hover {
   opacity: .60;
 }
@@ -135,4 +152,28 @@ input.search {
 
 .search a.ui.active.label, .search a.ui.label {
   display: none !important;
+}
+
+.save-icon{
+  height: 50px;
+  width: 45px;
+  padding-right: 15px;
+}
+
+.clear-icon {
+  width: 30px;
+}
+
+.save-icon:hover{
+  opacity: .8;
+}
+
+.save-icon:active{
+  color: darkred;
+}
+
+.server-response {
+  color: #3ecc9a;
+  font-style: italic;
+  opacity: .6;
 }
