--- a/src/assets/algo.css
+++ b/src/assets/algo.css
@@ -174,6 +174,11 @@ p {
     max-height: 500px;
 }
 
+.transaction-table th:hover{
+    cursor: pointer;
+    text-decoration: underline;
+}
+
 .backtest .active {
     background: #282828;
 }
@@ -234,4 +239,9 @@ p {
     background: #282828;
     overflow: scroll;
     min-height:500px;
+}
+
+.sort-icon {
+    position: relative;
+    left: 5px;
 }
