Filtering is MOSTLY working. Mechanisms are all there, just need to change the conditions to work properly. Will need collab work.

--- a/src/assets/algo.css
+++ b/src/assets/algo.css
@@ -248,4 +248,9 @@ p {
 
 .sort-button{
     max-width: 200px;
+    background: none;
+}
+
+.sort-button.selected{
+    border: 3px solid #3ecc9a;
 }
