change the font of the nav bar

--- a/src/assets/nav.css
+++ b/src/assets/nav.css
@@ -17,7 +17,7 @@
 
 .nav {
     display: flex;
-    font-family: 'Rufina', sans-serif;
+    font-family: 'Proxima Nova', sans-serif;
     font-size: 18px;
     z-index: 5;
 }
