--- a/src/assets/algo.css
+++ b/src/assets/algo.css
@@ -259,3 +259,12 @@ p {
 .sort-button.selected{
     border: 3px solid #3ecc9a;
 }
+
+.flex-container .con {
+  min-width: 400px;
+  max-height: 400px;
+}
+
+.flex-container div {
+  margin: 20px 20px 0px 0px;
+}
