--- a/src/assets/algo.css
+++ b/src/assets/algo.css
@@ -114,6 +114,10 @@ p {
     margin: auto;
 }
 
+.live-stats {
+  max-width: 375px;
+  min-width: 375px;
+}
 .percent {
   font-size: 64px;
   font-weight: bold;
@@ -123,12 +127,13 @@ p {
   width: 170px;
   height: 170px;
   position: absolute;
-  top: 72px;
-  right: 55px;
+  top: 50px;
+  right: 34px;
 }
+
 .live-stats .percent {
   font-size: 50px;
-  top: 25px;
+  top: 78px;
   width: 150px;
   height: 150px;
 }
@@ -263,6 +268,7 @@ p {
 .flex-container .con {
   min-width: 400px;
   max-height: 400px;
+  max-width: 400px;
 }
 
 .flex-container div {
