--- a/src/pages/votes/votes.css
+++ b/src/pages/votes/votes.css
@@ -7,12 +7,27 @@
 }
 
 .vote-btn {
-    max-width: 50px;
+    line-height: 7px;
+    /* outline-width: thin; */
+    /* max-width: 36px; */
     background: none;
     border: 2px solid #3ecc9a;
-    margin-right: 0.5rem;
+    /* margin-right: 0.5rem; */
+    width: 30px;
+    margin: 0px 10px 0px 0px;
+    height: 30px;
 }
 
 .vote-btn:disabled.current-vote {
     background: #3ecc9a;
+}
+
+.ul-votes {
+  padding: 0px;
+}
+
+.button-wrap-vote {
+  display: inline;
+width: 100%;
+margin: 0px;
 }
