add correct red color

--- a/src/assets/algo.css
+++ b/src/assets/algo.css
@@ -131,7 +131,7 @@ p {
   right: 34px;
 }
 .percentRed {
-  border: 3px solid #3ecc9a;
+  border: 3px solid #FA6353;
 }
 .percentGreen {
   border: 3px solid #44E8AE;
